[package]
name = "adder"
version = "0.1.0"
authors = ["fqliao <fqliao@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "testbin"
path = "src/bin/main.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]

rand = "0.3.14"
art_mix_color = "0.1.1"

add_one = { path = "../add_one"}
add_two = { path = "../add_two"}

